--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -92,10 +92,10 @@
   <div id="support-dropdown" class="z-10 hidden bg-secondary-50 divide-y divide-primary-100/50 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600 ">
     <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="avatarButton">
       <li>
-        <a href="http://85.215.243.214:6875/" class="flex w-full justify-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">{{ 'HEADER._knowledge' | translate }}</a>
+        <a href="http://85.215.243.214:6875/" class="flex w-full justify-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"><fa-icon [icon]="faBrain" class="mr-2"></fa-icon>{{ 'HEADER._knowledge' | translate }}</a>
       </li>
       <li>
-        <a href="http://85.215.243.214:8080/" class="flex w-full justify-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">{{ 'HEADER._ticketing' | translate }}</a>
+        <a href="http://85.215.243.214:8080/" class="flex w-full justify-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"><fa-icon [icon]="faClipboardCheck" class="mr-2"></fa-icon>{{ 'HEADER._ticketing' | translate }}</a>
       </li>
     </ul>
   </div>
