--- a/src/app/offerings/featured/featured.component.html
+++ b/src/app/offerings/featured/featured.component.html
@@ -1,5 +1,5 @@
 <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16">
-  <h2 class="pb-8 text-4xl font-extrabold text-primary-100 mb-4 text-center dark:text-primary-50">{{ 'FEATURED._title' | translate }}</h2>
+  <h2 class=" text-4xl font-extrabold text-primary-100 text-center dark:text-primary-50">{{ 'FEATURED._title' | translate }}</h2>
   <!--div class="bg-gray-50 dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-lg p-8 md:p-12 mb-8">
     <a href="#" class="bg-blue-100 text-blue-800 text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md dark:bg-gray-700 dark:text-blue-400 mb-2">
       <svg class="w-2.5 h-2.5 mr-1.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 14">
